--- a/pom.xml
+++ b/pom.xml
@@ -77,14 +77,52 @@
 				<enabled>true</enabled>
 			</releases>
 		</repository>
+		<repository>
+			<id>org.springframework.maven.release</id>
+			<name>Spring Maven Release Repository</name>
+			<url>http://repo.springsource.org/release</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<!-- For testing against latest Spring snapshots -->
+		<repository>
+			<id>org.springframework.maven.snapshot</id>
+			<name>Spring Maven Snapshot Repository</name>
+			<url>http://repo.springsource.org/snapshot</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<!-- For developing against latest Spring milestones -->
+		<repository>
+			<id>org.springframework.maven.milestone</id>
+			<name>Spring Maven Milestone Repository</name>
+			<url>http://repo.springsource.org/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<version.aspectj>1.6.12</version.aspectj>
 		<version.hibernate>4.1.4.Final</version.hibernate>
+		<version.hibernate-validator>4.3.0.Final</version.hibernate-validator>
 		<version.slf4j>1.6.6</version.slf4j>
 		<version.spring>3.1.1.RELEASE</version.spring>
+		<version.spring-social>1.1.0.BUILD-SNAPSHOT</version.spring-social>
+		<version.spring-social.facebook>1.1.0.BUILD-SNAPSHOT</version.spring-social.facebook>
+		<version.spring-social.google>0.0.1-SNAPSHOT</version.spring-social.google>
+		<version.spring-social.twitter>1.1.0.BUILD-SNAPSHOT</version.spring-social.twitter>
+		<version.spring-security>3.1.0.RELEASE</version.spring-security>
 	</properties>
 
 	<build>
@@ -343,11 +381,62 @@
 				<artifactId>spring-aspects</artifactId>
 				<version>${version.spring}</version>
 			</dependency>
+
 			<dependency>
-				<groupId>org.springframework.roo</groupId>
-				<artifactId>org.springframework.roo.annotations</artifactId>
-				<version>1.2.2.RELEASE</version>
-				<scope>provided</scope>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
+				<version>${version.spring}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-jdbc</artifactId>
+				<version>${version.spring}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${version.spring-security}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-taglibs</artifactId>
+				<version>${version.spring-security}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${version.spring-security}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.social</groupId>
+				<artifactId>spring-social-core</artifactId>
+				<version>${version.spring-social}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.social</groupId>
+				<artifactId>spring-social-facebook</artifactId>
+				<version>${version.spring-social.facebook}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.social</groupId>
+				<artifactId>spring-social-facebook-web</artifactId>
+				<version>${version.spring-social.facebook}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.social</groupId>
+				<artifactId>spring-social-google</artifactId>
+				<version>${version.spring-social.google}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.social</groupId>
+				<artifactId>spring-social-twitter</artifactId>
+				<version>${version.spring-social.twitter}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.social</groupId>
+				<artifactId>spring-social-web</artifactId>
+				<version>${version.spring-social}</version>
 			</dependency>
 			<!-- Optional spring deps. -->
 			<dependency>
@@ -375,6 +464,26 @@
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-hibernate3</artifactId>
 				<version>${version.spring}</version>
+			</dependency>
+
+			<!-- Spring build-time dependencies -->
+			<dependency>
+				<groupId>org.springframework.roo</groupId>
+				<artifactId>org.springframework.roo.annotations</artifactId>
+				<version>1.2.2.RELEASE</version>
+				<scope>provided</scope>
+			</dependency>
+
+			<!-- Validation -->
+			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>1.0.0.GA</version>
+			</dependency>
+			<dependency>
+				<groupId>org.hibernate</groupId>
+				<artifactId>hibernate-validator</artifactId>
+				<version>${version.hibernate-validator}</version>
 			</dependency>
 
 			<!-- ORM and Database -->
