--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.0</version>
+		<version>3.4.1</version>
 	</parent>
 
 	<groupId>dk.clanie</groupId>
@@ -50,21 +50,11 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<version.java>22</version.java>
+		<java.version>23</java.version>
 	</properties>
 
 	<build>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<verbose>true</verbose>
-					<fork>true</fork>
-					<compilerVersion>6.0</compilerVersion>
-					<source>${version.java}</source>
-					<target>${version.java}</target>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
@@ -164,6 +154,30 @@
 
 	<dependencyManagement>
 		<dependencies>
+
+			<!-- Clanie -->
+			<dependency>
+				<groupId>dk.clanie</groupId>
+				<artifactId>clanie-core</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>dk.clanie</groupId>
+				<artifactId>clanie-test</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+
+			<!-- Miscellaneous-->
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.17.0</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>1.17.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -173,11 +187,11 @@
 	<distributionManagement>
 		<repository>
 			<id>github-releases</id>
-			<url>https://maven.pkg.github.com/clanie/clanie-maven-repo</url>
+			<url>https://maven.pkg.github.com/clanie/m2-repo</url>
 		</repository>
 		<snapshotRepository>
 			<id>github-snapshots</id>
-			<url>https://maven.pkg.github.com/clanie/clanie-maven-repo</url>
+			<url>https://maven.pkg.github.com/clanie/m2-repo</url>
 		</snapshotRepository>
 	</distributionManagement>
 
